--- a/Software/Werwolf/Werwolf/Werwolf.csproj
+++ b/Software/Werwolf/Werwolf/Werwolf.csproj
@@ -197,10 +197,10 @@
     <Compile Include="Inhalt\XmlElement.cs" />
     <Compile Include="Forms\ITool.cs" />
     <Compile Include="Karten\Alchemie\AlchemieSubType.cs" />
+    <Compile Include="Karten\Alchemie\AlchemieTitle.cs" />
     <Compile Include="Karten\Alchemie\CostMarker.cs" />
     <Compile Include="Karten\Alchemie\GoldBox.cs" />
     <Compile Include="Karten\Alchemie\StarBox.cs" />
-    <Compile Include="Karten\Alchemie\StarTitle.cs" />
     <Compile Include="Karten\CyberAktion\CyberAktionHeader.cs" />
     <Compile Include="Karten\CyberAktion\CyberWaffenHeader.cs" />
     <Compile Include="Karten\CyberAktion\DoppelTabTextBox.cs" />
