--- a/Software/Werwolf/Werwolf/Werwolf.csproj
+++ b/Software/Werwolf/Werwolf/Werwolf.csproj
@@ -49,6 +49,25 @@
     <Prefer32Bit>false</Prefer32Bit>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="itextsharp, Version=5.5.1.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -92,6 +111,9 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\ElementButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Forms\PreForms\ArtLibrarySelectionButton.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Forms\PreForms\BildForm.cs">
@@ -290,6 +312,10 @@
     <ProjectReference Include="..\..\..\..\Assistment\Assistment\Assistment.csproj">
       <Project>{0C5CE078-5B2A-4160-B9DF-DBD11094422B}</Project>
       <Name>Assistment</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\MagicCrawler\ArtOfMagicCrawler\ArtOfMagicCrawler\ArtOfMagicCrawler.csproj">
+      <Project>{4284a8e8-d5ee-42ed-8ace-e1e16734276a}</Project>
+      <Name>ArtOfMagicCrawler</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
