--- a/Software/Werwolf/Werwolf/Werwolf.csproj
+++ b/Software/Werwolf/Werwolf/Werwolf.csproj
@@ -42,6 +42,7 @@
     <OutputPath>bin\x64\Debug\</OutputPath>
     <Prefer32Bit>false</Prefer32Bit>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Optimize>false</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
