--- a/Software/Werwolf/Werwolf/Werwolf.csproj
+++ b/Software/Werwolf/Werwolf/Werwolf.csproj
@@ -336,15 +336,27 @@
     <Content Include="Ressourcen\Bilder\HauptBilder\bloody-werwolf.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Ressourcen\Bilder\HauptBilder\Dorfbewohner.png" />
+    <Content Include="Ressourcen\Bilder\HauptBilder\Dorfbewohner.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Ressourcen\Bilder\HauptBilder\fireball.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Ressourcen\Bilder\HauptBilder\Hexe.png" />
+    <Content Include="Ressourcen\Bilder\HauptBilder\Hexe.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Ressourcen\Bilder\HauptBilder\long-sword.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Ressourcen\Bilder\HauptBilder\peasant.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Ressourcen\Bilder\HauptBilder\Seher.png" />
+    <Content Include="Ressourcen\Bilder\HauptBilder\potion.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Ressourcen\Bilder\HauptBilder\Seher.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Ressourcen\Bilder\HauptBilder\soothsayer.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -354,7 +366,12 @@
     <Content Include="Ressourcen\Bilder\HauptBilder\taking-cover.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Ressourcen\Bilder\HauptBilder\Werwolf.png" />
+    <Content Include="Ressourcen\Bilder\HauptBilder\Werwolf.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Ressourcen\Bilder\HauptBilder\witch.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Ressourcen\Bilder\HintergrundBilder\AlchemieAktion.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -560,6 +577,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Ressourcen\Bilder\TextBilder\E.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Ressourcen\Bilder\TextBilder\Goldkosten.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Ressourcen\Settings.xml">
