--- a/Software/Werwolf/WolfSlave/WolfSlave.csproj
+++ b/Software/Werwolf/WolfSlave/WolfSlave.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F447732D-BEA1-46FC-93BB-F77724E905DB}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WolfSlave</RootNamespace>
     <AssemblyName>WolfSlave</AssemblyName>
